[package]
name = "raid1"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0 OR BSD-3-Clause"
description = "ironspdk RAID1 example"

[build-dependencies]
cc = "1.2.56"

# NOTE! This is specific to workspace example, so local paths are used.

# In your projects, you should write here:
#    ironspdk-sys = "0.1"

ironspdk-sys = { path = "../../ironspdk-sys" }

[dependencies]
ctor = "0.6.3"
env_logger = "0.11.8"
log = "0.4.29"
paste = "1.0.15"

# In your projects, you should write here:
#    ironspdk-sys = "0.1"
#    ironspdk = "0.1"

ironspdk-sys = { path = "../../ironspdk-sys" }
ironspdk = { path = "../../ironspdk" }
